--- a/platformio.ini
+++ b/platformio.ini
@@ -12,3 +12,6 @@
 platform = raspberrypi
 board = pico
 framework = arduino
+lib_deps = 
+	arkhipenko/TaskScheduler@^3.8.5
+	bblanchon/ArduinoJson@^7.0.4
