shifts rpi build core

--- a/platformio.ini
+++ b/platformio.ini
@@ -9,9 +9,10 @@
 ; https://docs.platformio.org/page/projectconf.html
 
 [env:pico]
-platform = raspberrypi
+platform = https://github.com/maxgerhardt/platform-raspberrypi.git
 board = pico
 framework = arduino
+board_build.core = earlephilhower
 lib_deps = 
 	arkhipenko/TaskScheduler@^3.8.5
 	bblanchon/ArduinoJson@^7.0.4
