minor edits and upgrades

--- a/platformio.ini
+++ b/platformio.ini
@@ -13,6 +13,8 @@ platform = https://github.com/maxgerhardt/platform-raspberrypi.git
 board = pico
 framework = arduino
 board_build.core = earlephilhower
+upload_port = //dev/cu./dev/cu.usbmodem21301
 lib_deps = 
 	arkhipenko/TaskScheduler@^3.8.5
 	bblanchon/ArduinoJson@^7.0.4
+
