imps: load and save to filesystem ( working )

--- a/platformio.ini
+++ b/platformio.ini
@@ -8,13 +8,29 @@
 ; Please visit documentation for the other options and examples
 ; https://docs.platformio.org/page/projectconf.html
 
-[env:pico]
+
+[env]
 platform = https://github.com/maxgerhardt/platform-raspberrypi.git
 board = pico
 framework = arduino
 board_build.core = earlephilhower
-upload_port = //dev/cu./dev/cu.usbmodem21301
+board_build.filesystem_size = 0.5m
 lib_deps = 
 	arkhipenko/TaskScheduler@^3.8.5
 	bblanchon/ArduinoJson@^7.0.4
+build_flags = 
+	-D VERSION=\"1.0.0\"
+
+[env:pico-hdmi]
+build_flags = 
+	${env.build_flags}
+	-D MUX_HDMI
+
+
+[env:pico-usb]
+build_flags = 
+	${env.build_flags}
+	-D MUX_USB
+
+
 
